fix download link

--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -8,7 +8,7 @@
     <title>Resume</title>
   </head>
   <body>
-    <a class="download-link" download="Nathan_Minchow_Resume.pdf" href="../../doc/resume2020.pdf">Download</a>
+    <a class="download-link" href="../../doc/resume2020.pdf">View as PDF File</a>
     <main>
       <header>
         <h1>Nathan Minchow</h1>
