fix link again!

--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -8,7 +8,7 @@
     <title>Resume</title>
   </head>
   <body>
-    <a class="card download-link" href="doc/Resume2020.pdf"
+    <a class="card download-link" href="https://nminchow.com/doc/Resume2020.pdf"
       >View as PDF File</a
     >
       <div class="description-container card">
