Add new dark mode demo and article link

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
         </section>
         <section id="projects">
             <h2>Projects</h2>
+            <p>
+                <a href="https://nspenner.github.io/theme-lab/">Dark-Mode</a>: A mockup UI design with a custom
+                dark-mode using <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/--*">CSS Custom Properties</a>. I also wrote <a href="https://dev.to/nathanminchow/easy-website-themes-with-css-custom-properties-1pb7">an article</a> about the power of CSS variables in theme customization.
+            </p>
             <p><a href="./pages/resume/resume.html">CSSumé</a>: I redid my resume in HTML and CSS because I was sick of Word. Read about it <a href="https://dev.to/nathanminchow/creating-a-resume-in-html-and-css-5258">here</a>.</p>
-            <p><a href="https://codepen.io/nathanspenner/pen/ZEEKMYN">Gradient Todo</a>: A tiny frontend for a Todo app utilizing CSS gradients and pseudo-elements</p>
-            <p><a href="https://codepen.io/nathanspenner/pen/EdzYoB/">Dark-Mode</a>: A mockup UI design with a custom
-                dark-mode using <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/--*">CSS
-                    Variables</a>.</p>
+            <p><a href="https://codepen.io/nathanspenner/pen/ZEEKMYN">Gradient Todo</a>: A tiny frontend for a Todo app utilizing CSS gradients and pseudo-elements.</p>
             <p><a href="dynamic_audio/dynamic_sound.html">Dynamic Audio Demo</a>: A <a href="https://godotengine.org/">Godot</a>
-                project created to demonstrate dynamic audio tracks</p>
+                project created to demonstrate dynamic audio tracks.</p>
             <p><a href="https://htmlpreview.github.io/?https://github.com/nspenner/rgb/blob/master/index.html">RGB</a>:
                 A game I created with HTML, CSS, and JS as part of a web developer course.</p>
             <!-- <p><a href="">Slick</a>: A puzzle game created with some peers for a software engineering class.</p> -->
