Clear up dark mode wording

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <section id="projects">
             <h2>Projects</h2>
             <p>
-                <a href="https://nspenner.github.io/theme-lab/">Dark-Mode</a>: A mockup UI design with a custom
-                dark-mode using <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/--*">CSS Custom Properties</a>. I also wrote <a href="https://dev.to/nathanminchow/easy-website-themes-with-css-custom-properties-1pb7">an article</a> about the power of CSS variables in theme customization.
+                <a href="https://nspenner.github.io/theme-lab/">Dark-Mode</a>: I implemented dark mode in a site template
+                using <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/--*">CSS Custom Properties</a>. I also wrote <a href="https://dev.to/nathanminchow/easy-website-themes-with-css-custom-properties-1pb7">an article</a> about the power of CSS variables in theme customization.
             </p>
             <p><a href="./pages/resume/resume.html">CSSumé</a>: I redid my resume in HTML and CSS because I was sick of Word. Read about it <a href="https://dev.to/nathanminchow/creating-a-resume-in-html-and-css-5258">here</a>.</p>
             <p><a href="https://codepen.io/nathanspenner/pen/ZEEKMYN">Gradient Todo</a>: A tiny frontend for a Todo app utilizing CSS gradients and pseudo-elements.</p>
