--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p><a href="https://github.com/nspenner">Github</a></p>
             <p><a href="https://codepen.io/nathanspenner">Codepen</a></p>
             <p><a href="https://blog.nminchow.com">Blog</a></p>
-            <p><a href="https://dev.to/nathanminchow/">Dev.to</a></p>
+            <p><a href="https://dev.to/nathanminchow">DEV.to</a></p>
             <p><a href="doc/Resume2020.pdf">Resume</a></p>
 
         </section>
