--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -8,8 +8,11 @@
     <title>Resume</title>
   </head>
   <body>
-    <a class="download-link" href="https://nminchow.com/doc/Resume2020.pdf"
-      >View as PDF File</a
+    <a
+      class="download-link"
+      download="Nathan_Minchow_Resume.pdf"
+      href="../../doc/resume2020.pdf"
+      >Download</a
     >
     <main>
       <header>
@@ -19,6 +22,7 @@
           <span>nminchow.com</span>
           <span>Omaha, NE</span>
         </div>
+        <div class="contact-info"></div>
       </header>
       <section class="content-section">
         <h1>Objective</h1>
@@ -53,8 +57,7 @@
                 Collaborated on projects with teams across the US and overseas
               </li>
               <li>
-                Created documentation to plan, develop, test, and execute,
-                projects
+                Designed and developed custom user interfaces
               </li>
               <li>
                 Developed, tested, and deployed client solutions in healthcare
@@ -157,10 +160,10 @@
             <h1>Skills</h1>
             <ul>
               <li>
-                Most experience with JavaScript, TypeScript, HTML, CSS, and Java
+                Most experience with JavaScript, HTML, CSS, and Java
               </li>
               <li>
-                Experience with Angular2+, React, Express, Jekyll, and Lightning
+                Experience with Angular2+, React, Express, Jekyll, and Eleventy
               </li>
               <li>Experience with PostgreSQL and MongoDB</li>
               <li>Experience with Adobe XD / Figma / Sketch</li>
