Add nomo to project list

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <section id="projects">
             <h2>Projects</h2>
             <p>
+                <a href="https://nspenner.github.io/nomo/">
+                    nomo
+                </a>: 
+                I created a straightforward metronome that uses the Web Audio API to keep accurate time and update dynamically.</p>
+            <p>
                 <a href="https://nspenner.github.io/theme-lab/">Dark-Mode</a>: I implemented dark mode in a site template
                 using <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/--*">CSS Custom Properties</a>. I also wrote <a href="https://dev.to/nathanminchow/easy-website-themes-with-css-custom-properties-1pb7">an article</a> about the power of CSS variables in theme customization.
             </p>
