--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <section id="projects">
             <h2>Projects</h2>
             <p>
+                <a href="https://nspenner.github.io/werkweek">WerkWeek</a>: an app to help manage time. 
+                Set alarms, countdowns, and more to help track your day (or week!)
+            </p>
+            <p>
                 <a href="https://nspenner.github.io/nomo/">
                     nomo
                 </a>: 
