--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -160,10 +160,10 @@
             <h1>Skills</h1>
             <ul>
               <li>
-                Most experience with JavaScript, HTML, CSS, and Java
+                Most experience with JavaScript/Node, HTML, CSS, and Java
               </li>
               <li>
-                Experience with Angular2+, React, Express, Jekyll, and Eleventy
+                Experience with React, Vue, and Express
               </li>
               <li>Experience with PostgreSQL and MongoDB</li>
               <li>Experience with Adobe XD / Figma / Sketch</li>
