--- a/pages/resume/resume.html
+++ b/pages/resume/resume.html
@@ -20,7 +20,7 @@
         <div class="contact-info">
           <span>nathan.minchow@outlook.com</span>
           <span>nminchow.com</span>
-          <span>Omaha, NE</span>
+          <span>Atlanta, GA</span>
         </div>
         <div class="contact-info"></div>
       </header>
