Test staff layers, animation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,29 @@
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div role="presentation" id="ex1" class="staff-presentation-layer">
+      <div class="floatbox staff-container staff-container--left" id="ex1-container">
+        <div id="ex1-layer" class="staff">
+          <div class="staff__bar"></div>
+          <div class="staff__bar"></div>
+          <div class="staff__bar"></div>
+          <div class="staff__bar"></div>
+          <div class="staff__bar"></div>
+        </div>
+      </div>
+    </div> -->
+    <!-- <div role="presentation" class="staff-presentation-layer staff-presentation-layer--top">
+      <div class="floatbox staff-container staff-container--left">
+        <div class="staff">
+          <div class="staff__bar staff__bar--top"></div>
+          <div class="staff__bar"></div>
+          <div class="staff__bar"></div>
+          <div class="staff__bar"></div>
+          <div class="staff__bar"></div>
+        </div>
+      </div>
+    </div> -->
+    <div class="container" id="page-container">
       <div class="header-container">
         <div class="animate__animated animate__fadeInDown text-container">
           <div class="text">Nathan Minchow</div>
@@ -49,6 +71,20 @@
         <img src="img/nathan.jpeg" alt="Headshot of Nathan Minchow" />
       </div>
 
+      <div class="header-description">
+        <p>
+          I'm a web developer, designer, musician, and occasional X-Files
+          binger.
+        </p>
+
+        <p>
+          I have extensive experience in web development at companies like
+          Garmin, PaymentSpring/Nelnet, and Bloomberg. More details are on my
+          resume.
+        </p>
+
+        <p>To see more of my work, take a look at some of my projects below.</p>
+      </div>
       <div class="header-description">
         <p>
           I'm a web developer, designer, musician, and occasional X-Files
