Add links, contacts

--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
       <h2>Projects</h2>
       <ol class="project-list">
         <li class="project-list__item project-list__item--wide">
-          <div class="project">
-            <h3 class="project__title">Werkweek</h3>
-            <img
-              class="project__image"
-              src="img/Screenshot.png"
-              alt="Werkweek screenshot"
-            />
-          </div>
+          <h3 class="project__title">Werkweek</h3>
+          <img
+            class="project__image"
+            src="img/Screenshot.png"
+            alt="Werkweek screenshot"
+          />
         </li>
         <li class="project-list__item">
           <h3 class="project__title">Nomo</h3>
@@ -63,28 +61,66 @@
           />
         </li>
         <li class="project-list__item">
-          <h3 class="project__title project__title--bottom">match-css</h3>
+          <h3
+            class="project__title project__title--bottom project__title--right"
+          >
+            match-css
+          </h3>
           <img
-            class="project__image project__image--flipped"
+            class="project__image"
             src="img/demo.gif"
-            alt="Nomo screenshot"
+            alt="Demo of create matching css utility for Visual Studio Code"
           />
         </li>
-        <li class="project-list__item">Dark Mode</li>
-        <li class="project-list__item">Gradient Todo</li>
+        <li class="project-list__item">
+          <h3 class="project__title">Dark Mode</h3>
+          <img
+            class="project__image"
+            src="img/darkmode.gif"
+            alt="Demo of dark mode toggle using CSS Custom Properties"
+          />
+        </li>
+        <li class="project-list__item">
+          <h3 class="project__title project__title--bottom">Gradient Todo</h3>
+          <img
+            class="project__image"
+            src="img/todo.png"
+            alt="Gradient todo screenshot"
+          />
+        </li>
       </ol>
-      <h2>Contact</h2>
-      <ul>
-        <li>Email</li>
-        <li>LinkedIn</li>
-      </ul>
-      <h2>Links</h2>
-      <ul>
-        <li>Github</li>
-        <li>Codepen</li>
-        <li>DEV.to</li>
-        <li>Resume</li>
-      </ul>
+      <div class="row">
+        <div class="list-container">
+          <h2>Contact</h2>
+          <ul class="contact-list">
+            <li class="contact-list__item">
+              <a target="_blank" href="mailto:nathan.minchow@outlook.com">Email</a>
+            </li>
+            <li class="contact-list__item">
+              <a target="_blank" href="https://www.linkedin.com/in/nathan-minchow-b165baa5/"
+                >LinkedIn</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="list-container">
+          <h2>Links</h2>
+          <ul class="link-list">
+            <li class="link-list__item">
+              <a target="_blank" href="https://github.com/nspenner">Github</a>
+            </li>
+            <li class="link-list__item">
+              <a target="_blank" href="https://codepen.io/nathanspenner">Codepen</a>
+            </li>
+            <li class="link-list__item">
+              <a target="_blank" href="https://dev.to/nathanminchow">DEV.to</a>
+            </li>
+            <li class="link-list__item">
+              <a target="_blank" href="doc/Resume2021.pdf">Resume</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
   <script src="scripts.js"></script>
