--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
       <div role="presentation" class="vertical-bar vertical-bar--left"></div>
       <div role="presentation" class="vertical-bar vertical-bar--accent"></div>
     </div>
+    <div role="presentation" class="positioned">
+      <div class="background-lines">
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+      </div>
+    </div>
     <div class="content-container">
       <ol class="project-list">
         <li class="project-list__item project-list__item--wide">
@@ -98,13 +107,6 @@
           />
         </li>
       </ol>
-    </div>
-    <div class="background-lines" role="presentation">
-      <div class="background-lines__line"></div>
-      <div class="background-lines__line"></div>
-      <div class="background-lines__line"></div>
-      <div class="background-lines__line"></div>
-      <div class="background-lines__line"></div>
     </div>
     <div class="content-container">
       <div class="row">
