--- a/index.html
+++ b/index.html
@@ -17,23 +17,31 @@
     />
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="links.css" />
     <title>Nathan Minchow Portfolio</title>
   </head>
 
   <body>
-    <div class="content-container">
+    <div role="presentation" class="positioned">
+      <div class="background-lines background-lines--large">
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+        <div class="background-lines__line"></div>
+      </div>
+    </div>
+    <div class="content-container content-container--large">
       <div class="header">
         <span class="header__subtext">Hello, my name is</span>
         <h1 class="header__text">Nathan Minchow</h1>
       </div>
-    </div>
-    <div class="content-container">
       <div class="description-container">
         <p>
           I'm a web developer, designer, musician, and occasional X-Files
           binger.
         </p>
-        <p>
+        <p class="cl-effect-7">
           I have extensive experience in web development at companies like
           Garmin, Nelnet, and Bloomberg. More details are on my
           <a target="_blank" href="doc/Resume2021.pdf">resume</a>.
@@ -108,7 +116,7 @@
         </li>
       </ol>
     </div>
-    <div class="content-container">
+    <div class="content-container cl-effect-7">
       <div class="row">
         <div class="list-container">
           <h2>Contact</h2>
