Adjust link styling, add contact link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <div role="presentation" class="positioned">
+    <div role="presentation" class="background-lines-container">
       <div class="background-lines background-lines--large">
         <div class="background-lines__line"></div>
         <div class="background-lines__line"></div>
@@ -47,6 +47,12 @@
           <a target="_blank" href="doc/Resume2021.pdf">resume</a>.
         </p>
         <p>To see more of my work, take a look at my projects below.</p>
+        <p class="cl-effect-7">
+          Want to get in touch?
+          <a target="_blank" href="mailto:nathan.minchow@outlook.com"
+            >Send me a message</a
+          >.
+        </p>
       </div>
     </div>
     <div class="text-container">
